@@ -4,7 +4,7 @@ running configure, to aid debugging if configure makes a mistake.
 It was created by xymon configure 4.3.0, which was
 generated by GNU Autoconf 2.63.  Invocation command line was
 
-  $ ./configure --prefix=/tmp/xymon --no-create --no-recursion
+  $ ./configure --prefix=/tmp/xymon
 
 ## --------- ##
 ## Platform. ##
@@ -539,7 +539,7 @@ configure:15626: result: yes
 configure:15645: checking for cos in -lz
 configure:15680: gcc -o conftest -g   conftest.c -lz   >&5
 conftest.c:43: warning: conflicting types for built-in function 'cos'
-/tmp/ccxCyEcP.o: In function `main':
+/tmp/cckmBfDE.o: In function `main':
 /home/tjyang/hobbitmon/sandbox/tjyang/conftest.c:47: undefined reference to `cos'
 collect2: ld returned 1 exit status
 configure:15687: $? = 1
@@ -1341,7 +1341,7 @@ configure:19439: $? = 0
 configure:19461: result: yes
 configure:19376: checking for pstat_getdynamic
 configure:19432: gcc -o conftest -g   conftest.c -lrrd -lrt -lpcre -lm  >&5
-/tmp/cc8Cspjl.o: In function `main':
+/tmp/ccyrqLWq.o: In function `main':
 /home/tjyang/hobbitmon/sandbox/tjyang/conftest.c:105: undefined reference to `pstat_getdynamic'
 collect2: ld returned 1 exit status
 configure:19439: $? = 1
@@ -1532,6 +1532,36 @@ configure:19517: gcc -o conftest -g   conftest.c -lpcre  -lrrd -lrt -lpcre -lm  
 configure:19524: $? = 0
 configure:19545: result: yes
 configure:19713: creating ./config.status
+
+## ---------------------- ##
+## Running config.status. ##
+## ---------------------- ##
+
+This file was extended by xymon config.status 4.3.0, which was
+generated by GNU Autoconf 2.63.  Invocation command line was
+
+  CONFIG_FILES    = 
+  CONFIG_HEADERS  = 
+  CONFIG_LINKS    = 
+  CONFIG_COMMANDS = 
+  $ ./config.status 
+
+on f12
+
+config.status:1121: creating Makefile
+config.status:1121: creating lib/Makefile
+config.status:1121: creating common/Makefile
+config.status:1121: creating client/Makefile
+config.status:1121: creating demotool/Makefile
+config.status:1121: creating bbdisplay/Makefile
+config.status:1121: creating bbproxy/Makefile
+config.status:1121: creating docs/Makefile
+config.status:1121: creating examples/Makefile
+config.status:1121: creating hobbitd/Makefile
+config.status:1121: creating config.h
+config.status:1343: config.h is unchanged
+config.status:1395: executing depfiles commands
+config.status:1395: executing libtool commands
 configure:22227: Xymon source code configured for: 
 configure:22229: OS type  : linux-gnu
 configure:22231: Host CPU : i686
@@ -1909,50 +1939,3 @@ target_alias=''
 #define HAVE_LIBPCRE 1
 
 configure: exit 0
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by xymon config.status 4.3.0, which was
-generated by GNU Autoconf 2.63.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status 
-
-on f12
-
-config.status:1121: creating Makefile
-config.status:1121: creating lib/Makefile
-config.status:1121: creating common/Makefile
-config.status:1121: creating client/Makefile
-config.status:1121: creating demotool/Makefile
-config.status:1121: creating bbdisplay/Makefile
-config.status:1121: creating bbproxy/Makefile
-config.status:1121: creating docs/Makefile
-config.status:1121: creating examples/Makefile
-config.status:1121: creating hobbitd/Makefile
-config.status:1121: creating config.h
-config.status:1343: config.h is unchanged
-config.status:1395: executing depfiles commands
-config.status:1395: executing libtool commands
-
-## ---------------------- ##
-## Running config.status. ##
-## ---------------------- ##
-
-This file was extended by xymon config.status 4.3.0, which was
-generated by GNU Autoconf 2.63.  Invocation command line was
-
-  CONFIG_FILES    = 
-  CONFIG_HEADERS  = 
-  CONFIG_LINKS    = 
-  CONFIG_COMMANDS = 
-  $ ./config.status config.h
-
-on f12
-
-config.status:1121: creating config.h
