@@ -1,3 +1,13 @@
+Changes from 4.3.0 beta 2 -> 4.3.0 beta 3 (06 March 2010)
+=======================================================
+* add compression.c into this branch from trunk.
+* using autoconf,automake and libtool GNU build system.
+* configure.ac created.
+* demotool add back from trunk.
+* Adding more documentation in codes using format for doxygen
+
+
+
 Changes from 4.3.0 beta 1 -> 4.3.0 beta 2 (24 Apr 2009)
 =======================================================
 * New "--shuffle" option for bbtest-net to run network tests
